# Election-Prediction-Program

./: .gitignore  CLAUDE.md  OVERVIEW.md  PROFILE.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: dependencies.py  pipeline_runner.py  scheduler.py
backend/config/: config.yaml  query_templates.json
backend/ingestion/: base_registry.py  pipeline.py  tagger.py
backend/ingestion/chunker/: __init__.py  article_aware.py  base.py  korean_paragraph.py  recursive.py  semantic.py  sentence.py  token.py
backend/ingestion/embedder/: __init__.py  base.py  bge.py  ko_simcse.py  openai_embedder.py
backend/ingestion/scraper/: __init__.py  base.py  naver.py  naver_election.py  political.py  run.py  url_store.py
backend/models/: article.py  chunk.py  poll.py  score.py
backend/rag/: anthropic_scorer.py  graph_logger.py  gsheets_poll_store.py  jsonl_poll_store.py  openai_scorer.py  pipeline.py  poll_store.py  reranker.py  retriever.py  scorer.py  verdict_graph.py  verdict_store.py
backend/tests/app/: test_admin.py  test_scheduler.py  test_scores.py
backend/tests/ingestion/: test_chunker.py  test_embedder.py  test_pipeline.py  test_scraper.py  test_tagger.py
backend/tests/rag/: test_poll_store.py  test_reranker.py  test_retriever.py  test_scorer.py  test_verdict_graph.py  test_verdict_store.py
backend/vectordb/: __init__.py  base.py  chroma_repo.py  lancedb_repo.py  milvus_repo.py  pgvector_repo.py  pinecone_repo.py  qdrant_repo.py  weaviate_repo.py
(+21 files in other folders)
